kubernetes-microservices-student-portal/kubernetes/03-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: student-portal
spec:
  clusterIP: None
  selector: {app: postgres}
  ports: [{port: 5432, targetPort: 5432}]
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: student-portal
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels: {app: postgres}
  template:
    metadata:
      labels: {app: postgres}
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports: [{containerPort: 5432}]
        volumeMounts: [{name: postgres-data, mountPath: /var/lib/postgresql/data}]
        readinessProbe:
          exec: {command: [sh, -c, "pg_isready -U portaluser -d studentportal"]}
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests: {cpu: 100m, memory: 128Mi}
          limits: {cpu: 500m, memory: 512Mi}
  volumeClaimTemplates:
  - metadata: {name: postgres-data}
    spec:
      accessModes: [ReadWriteOnce]
      resources:
        requests: {storage: 1Gi}
