kubernetes-microservices-student-portal/kubernetes/12-enrollment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enrollment-service
  namespace: student-portal
spec:
  selector: {app: enrollment-service}
  ports: [{port: 8000, targetPort: 8000}]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enrollment-service
  namespace: student-portal
spec:
  replicas: 2
  selector:
    matchLabels: {app: enrollment-service}
  template:
    metadata:
      labels: {app: enrollment-service}
    spec:
      containers:
      - name: enrollment-service
        image: YOUR_DOCKERHUB_USERNAME/enrollment-service:v1
        ports: [{containerPort: 8000}]
        readinessProbe: {httpGet: {path: /health, port: 8000}, initialDelaySeconds: 5, periodSeconds: 5}
        livenessProbe: {httpGet: {path: /health, port: 8000}, initialDelaySeconds: 15, periodSeconds: 10}
        resources:
          requests: {cpu: 50m, memory: 64Mi}
          limits: {cpu: 300m, memory: 256Mi}
