kubernetes-microservices-student-portal/kubernetes/13-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: student-portal
spec:
  selector: {app: frontend}
  ports: [{port: 80, targetPort: 80}]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: student-portal
spec:
  replicas: 2
  selector:
    matchLabels: {app: frontend}
  template:
    metadata:
      labels: {app: frontend}
    spec:
      containers:
      - name: frontend
        image: YOUR_DOCKERHUB_USERNAME/student-frontend:v1
        ports: [{containerPort: 80}]
        readinessProbe: {httpGet: {path: /, port: 80}, initialDelaySeconds: 3, periodSeconds: 5}
        resources:
          requests: {cpu: 25m, memory: 32Mi}
          limits: {cpu: 200m, memory: 128Mi}
