kubernetes-microservices-student-portal/kubernetes/20-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-portal
  namespace: student-portal
spec:
  ingressClassName: nginx
  rules:
  - host: student-portal.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port: {number: 80}
