kubernetes-microservices-student-portal/kubernetes/22-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-only-from-backends
  namespace: student-portal
spec:
  podSelector:
    matchLabels: {app: postgres}
  policyTypes: [Ingress]
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app
          operator: In
          values: [user-service, course-service, enrollment-service]
    ports: [{protocol: TCP, port: 5432}]
